2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/TODO: some bugs are fixed


2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_sprite.(cpp,h): cleanup
	* base/tu_memdebug.h: cleanup

2007-03-17  Vitaly Alexeev <tishka92@yahoo.com>
	
	* a lot of files: gameswf_impl is divided into 4 parts:
	gameswf_impl,
	gameswf_sprite_def (sprite definition) ,
	gameswf_sprite (sprite instance) & 
	gameswf_as_sprite (sprite built-in ActionScript methods)

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_movie_def.(cpp,h),
	* gameswf/gameswf_mutex.h,
	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_root.cpp:
	The job on the runing create_library_movie() & 
	create_library_movie_inst in separate threads is finished.
	Now .swf files are loaded much more quickly. I am assured that
	there are a bugs. It is not terrible :-). We shall work & fix bugs
	* gameswf/gameswf_test_ogl.cpp: progress bar is switched off (useless now)

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
	
	* base/tu_memdebug.h: added simplified API for using Stackwalker
	* base/Stackwalker.(cpp,h): Stackwalker body
	* gameswf/gameswf_test_ogl.cpp: Stackwalker is used for memory leaks
	testing (WIN32 only)
	Thanks Thatcher Ulrich for valuable advice

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_test_ogl.cpp: optimized progress bar perfomance
	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_movie_def.(cpp,h): fixed progress bar broken before

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
	
	* a lot of files: gameswf_impl is divided into 2 parts:
	gameswf_impl & gameswf_movie_def

2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>

	* base/image.(cpp,h): added ~image_base(),
	moved ~rgb(), ~rgba() and ~alpha() code to ~image_base()
	* gameswf/gameswf.h,
	* gameswf/gameswf_render.h: 
	* gameswf/gameswf_render_handler_ogl.h: 
	added ~bitmap_info() that memory did not leak,
	removed useless delete_bitmap_info() & delete_YUV_video(),